# VirtualMachine

./: CMakeLists.txt  main.cpp
builder/: CMakeLists.txt  builder.cpp  builder.hpp
core/: CMakeLists.txt  frame.cpp  machine.cpp  stack.cpp
core/inc/: bytecode.hpp  code.hpp  common.hpp  frame.hpp  function.hpp  machine.hpp  stack.hpp
core/src/: frame.cpp  function.cpp  machine.cpp  stack.cpp
include/builder/: builder.hpp  types.hpp
include/core/: bytecode.hpp  common.hpp  frame.hpp  function.hpp  machine.hpp  stack.hpp
include/instructions/: all.inc  binOp.inc  condBr.inc  load.inc  store.inc  withoutOperands.inc
include/instructions/memory/: load.inc  load_n.inc  store.inc  store_n.inc
